--- a/2018-01-28-Angular-s02.md
+++ b/2018-01-28-Angular-s02.md
@@ -88,3 +88,83 @@ use constructor injection
     }
 ...
 ```
+
+# Retrive Data using HTTP
+
+* ## Observables and Reactive Extensions
+    * manage sync data
+    * treat events as collection
+    * use reactive extensions(RxJS) no relation with REACT
+    * supports Observale operators: map, filter, take, merge ...
+
+* ## Promise vs Observables
+
+| Promise | Observable |
+| --- | --- |
+| provides a single future value | emits multiple values over time |
+| not lazy | lazy |
+| not cancellable | cancellable |
+| | supports operators |
+
+* **HttpClient exists in HttpClientModule**
+* import it in appModule
+
+In appModule:
+* imports means reference modules outside appModule
+* declarations means reference class/components inside appModule
+
+**Example**
+```typescript
+@Injectable()
+export class ProductService {
+    private _url:string = 'some-url';
+    constructor(private _http: HttpClient) {
+
+    }
+
+    getProducts(): Observable<IProduct[]> {
+        return this._http.get<IProducrt[]>(this._url);
+    }
+}
+```
+
+* ## Exception Handling
+```typescript
+import 'rxjs/add/operator/catch';
+import 'rxjs/add/operator/do';
+...
+        return this._http.get<IProduct[]>(this._url)
+            .do(data => console.log(data))
+            .catch(this.handleError);
+...
+
+    private handleError(err: HttpErrorResponse) {
+        //some code
+        console.log(err.message);
+        //or you can re-throw
+        return Observable.throw(err.message)'
+    }
+...
+```
+
+* ## Subscribe to an Observable
+```typescript
+x.then(valueFn, errorFn) //Promise
+x.subscribe(valueFn, errorFn) //Observable
+x.subscribe(valueFn, errorFn, completeFn) //Observable
+let s = x.subscribe(valueFn, errorFn, completeFn) //Observable
+s.unsubscribe() //unsubscribe a Observable
+```
+**Example**
+```typescript
+...
+    ngOnInit(): void {
+        this._productService.getProducts()
+            .subscribe(
+                products => this.products = products,
+                error => this.errorMessage = <any>error //since handleError do re-throw;
+            );
+    }
+...
+```
+
